--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <title>Semantic Navbar and Audios</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#contact-us">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h2>3 Random Audios</h2>
+      <div>
+        <audio controls>
+          <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+		   <audio controls>
+          <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+		   <audio controls>
+          <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">          Your browser does not support the audio element.
+        </audio>
+      </div>
+    </main>
+  </body>
 </html>
+Footer
+© 2023 GitHub, Inc.
